Fix sync indicator not being visible in deck list screen
Closes #2327

--- a/qt/aqt/data/web/css/toolbar.scss
+++ b/qt/aqt/data/web/css/toolbar.scss
@@ -148,9 +148,9 @@ body {
 }
 
 .normal-sync {
-    color: color(state-new);
+    color: color(state-new) !important;
 }
 
 .full-sync {
-    color: color(state-learn);
+    color: color(state-learn) !important;
 }
